src/test/ui/enum/enum-discrim-autosizing.stderr
error[E0081]: discriminant value `0` already exists
  --> $DIR/enum-discrim-autosizing.rs:8:12
   |
LL |     Au64 = 0,
   |            - first use of `0`
LL |     Bu64 = 0x8000_0000_0000_0000
   |            ^^^^^^^^^^^^^^^^^^^^^ enum already has `0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0081`.
